flexwrap & seperated nav. gpt fixed link tree

--- a/WebDev/src/CSS/blog.css
+++ b/WebDev/src/CSS/blog.css
@@ -21,7 +21,12 @@ nav ul{
   text-transform: uppercase;
 }
 
-.content, li {
+#top-nav, #bottom-nav
+         li{
+  list-style: none;
+}
+
+.content li {
   display: block;
 }
 
@@ -29,13 +34,13 @@ nav ul{
   display
 ] */
 
-.nav {
+/* .nav {
   position: float;
   top: 20;
   width: 100%;
   font-style: italic`;
   font-family: 'Hanken Grotesk','Open Sans', sans-serif,'Share Tech', sans-serif;
-}
+} */
 
 #top-nav
  a:visited {
@@ -51,49 +56,37 @@ nav ul{
   color: #188580;
 }
 
-#top-nav
-a:link{
- background-color: black;
-  color: #043672;
-  border: 2px solid #8da9c4;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: unerline;
-  display: inline;
-  a:hover, a:active 
-  background-color: grey;
-  color: #188580;
-}
-
-#bottom-nav
-a:visited {
+#top-nav a:link{
   background-color: black;
-  color: #7cb6b2;
-  border: 2px solid #8da9c4;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline;
-  a:hover, a:active 
-  background-color: grey;
-  color: #188580;
-  
-}
-
-#bottom-nav
-a:link{
- background-color: black;
   color: #043672;
   border: 2px solid #8da9c4;
   padding: 10px 20px;
   text-align: center;
-  text-decoration: unerline;
+  text-decoration: underline;
   display: inline;
-  a:hover, a:active 
-  background-color: grey;
-  color: #188580;
-  /* position: relative; */
 }
+
+#top-nav a:hover, #top-nav a:active {
+  background-color: #8da9c4;
+  color: black;
+}
+
+
+#bottom-nav a:link{
+  background-color: black;
+  color: #043672;
+  border: 2px solid #8da9c4;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: underline;
+  display: inline;
+}
+
+#bottom-nav a:hover, #bottom-nav a:active {
+  background-color: #8da9c4;
+  color: black;
+}
+
 
 a{
   border-radius: 2rem;
@@ -216,9 +209,18 @@ body{
   display: flex;
   background-color: #0c1622;
   margin-top: 1rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  flex-shrink: 2;
  }
 #top-nav{
   border-radius: 2rem;
   display: flex;
+  flex-direction: row;
   background-color: #0c1622;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  flex-shrink: 2;
  }
